Starting to get z offset menu together

--- a/printer_menu.cfg
+++ b/printer_menu.cfg
@@ -112,6 +112,7 @@ type: list
 name: Calibration
 items:
     .__bed_mesh_calibrate
+    .__probe_calibrate
 
 [menu __calibration __bed_mesh_calibrate]
 type: command
@@ -130,3 +131,20 @@ items:
     .__hotbed_pid_tuning
     .__host_restart
     .__firmware_restart
+
+
+
+[menu __calibration __probe_calibrate]
+type: list
+name: Adjust Z offset
+items:
+    .__toolhead_zpos
+
+
+[menu __calibration __probe_calibrate __toolhead_zpos]
+type: item
+width: 16
+name: "Z = {0:.3f}"
+cursor: \x20
+parameter: toolhead.zpos
+
