--- a/printer_menu.cfg
+++ b/printer_menu.cfg
@@ -137,8 +137,18 @@ items:
 [menu __calibration __probe_calibrate]
 type: list
 name: Adjust Z offset
+enter_gcode:
+    G28
+    G0 Z10 F6000
+    PROBE_CALIBRATE
 items:
     .__toolhead_zpos
+    .__testz_minus, .__testz_plus 
+    .__testz_minus_minus, .__testz_plus_plus
+    .__testz_minus_1, .__testz_plus_1
+    .__testz_minus_point_1, .__testz_plus_point_1
+    .__accept
+    .__abort
 
 
 [menu __calibration __probe_calibrate __toolhead_zpos]
@@ -148,3 +158,74 @@ name: "Z = {0:.3f}"
 cursor: \x20
 parameter: toolhead.zpos
 
+[menu __calibration __probe_calibrate __testz_minus]
+cursor: \x20
+type: command
+width: 7
+name: "   -"
+gcode: TESTZ Z=-
+
+[menu __calibration __probe_calibrate __testz_plus]
+cursor: \x20
+type: command
+name: "   +"
+width: 7
+gcode: TESTZ Z=+
+
+[menu __calibration __probe_calibrate __testz_minus_minus]
+cursor: \x20
+type: command
+name: "   --"
+width: 7
+gcode: TESTZ Z=--
+
+[menu __calibration __probe_calibrate __testz_plus_plus]
+cursor: \x20
+type: command
+name: "   ++"
+width: 7
+gcode: TESTZ Z=++
+
+[menu __calibration __probe_calibrate __testz_minus_1]
+cursor: \x20
+type: command
+name: "  -1.0"
+width: 7
+gcode: TESTZ Z=-1
+
+[menu __calibration __probe_calibrate __testz_plus_1]
+cursor: \x20
+type: command
+name: "  +1.0"
+width: 7
+gcode: TESTZ Z=+1
+
+[menu __calibration __probe_calibrate __testz_minus_point_1]
+cursor: \x20
+type: command
+name: "  -0.1"
+width: 7
+gcode: TESTZ Z=-0.1
+
+[menu __calibration __probe_calibrate __testz_plus_point_1]
+cursor: \x20
+type: command
+name: "  +0.1"
+width: 7
+gcode: TESTZ Z=+0.1
+
+[menu __calibration __probe_calibrate __accept]
+type: command
+name: Accept
+gcode: ACCEPT
+
+[menu __calibration __probe_calibrate __abort]
+type: command
+name: Abort
+gcode: ABORT
+action: back
+
+[menu __calibration __probe_calibrate __save_config]
+type: command
+name: Save config
+gcode: SAVE_CONFIG
