Pre hero me gen5

--- a/printer.cfg
+++ b/printer.cfg
@@ -151,7 +151,7 @@ samples_tolerance_retries: 1
  
 [bed_mesh]
 speed: 80
-horizontal_move_z: 5
+horizontal_move_z: 8
 mesh_min: 50, 30
 mesh_max: 180, 205
 probe_count: 5,5
@@ -197,23 +197,23 @@ z_hop_speed: 10.0
 #*# pid_kd = 523.501
 #*#
 #*# [bltouch]
-#*# z_offset = 4.525
+#*# z_offset = 2.599
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.001250, -0.055000, -0.043750, -0.015000, 0.102500
-#*# 	  0.053750, 0.011250, -0.013750, 0.021250, 0.156250
-#*# 	  0.077500, -0.000000, -0.027500, 0.080000, 0.208750
-#*# 	  0.170000, 0.097500, 0.126250, 0.151250, 0.261250
-#*# 	  0.093750, 0.060000, 0.105000, 0.208750, 0.305000
+#*# 	  -0.131250, -0.201250, -0.175000, -0.175000, -0.096250
+#*# 	  0.012500, -0.010000, -0.027500, -0.106250, -0.061250
+#*# 	  0.112500, 0.021250, -0.006250, 0.002500, 0.058750
+#*# 	  0.021250, -0.015000, 0.003750, -0.035000, 0.075000
+#*# 	  -0.035000, -0.086250, -0.073750, -0.067500, 0.013750
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 50.0000000001
+#*# min_x = 50.0
 #*# max_x = 180.0
 #*# min_y = 30.0
 #*# max_y = 205.0
@@ -221,18 +221,18 @@ z_hop_speed: 10.0
 #*# [bed_mesh ender3]
 #*# version = 1
 #*# points =
-#*# 	  0.001250, -0.055000, -0.043750, -0.015000, 0.102500
-#*# 	  0.053750, 0.011250, -0.013750, 0.021250, 0.156250
-#*# 	  0.077500, -0.000000, -0.027500, 0.080000, 0.208750
-#*# 	  0.170000, 0.097500, 0.126250, 0.151250, 0.261250
-#*# 	  0.093750, 0.060000, 0.105000, 0.208750, 0.305000
+#*# 	  -0.131250, -0.201250, -0.175000, -0.175000, -0.096250
+#*# 	  0.012500, -0.010000, -0.027500, -0.106250, -0.061250
+#*# 	  0.112500, 0.021250, -0.006250, 0.002500, 0.058750
+#*# 	  0.021250, -0.015000, 0.003750, -0.035000, 0.075000
+#*# 	  -0.035000, -0.086250, -0.073750, -0.067500, 0.013750
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = lagrange
 #*# tension = 0.2
-#*# min_x = 50.0000000001
+#*# min_x = 50.0
 #*# max_x = 180.0
 #*# min_y = 30.0
 #*# max_y = 205.0
