After hero me gen5 changes

--- a/printer.cfg
+++ b/printer.cfg
@@ -34,7 +34,8 @@ dir_pin: !PB2
 enable_pin: !PB11
 step_distance: .0125
 endstop_pin: ^PC1
-position_endstop: 0
+position_endstop: -9
+position_min: -9
 position_max: 235
 homing_speed: 50
 
@@ -139,8 +140,8 @@ pin: EXP1_1
 sensor_pin: ^PC2
 control_pin: PA1
 pin_up_touch_mode_reports_triggered: False
-x_offset: -50
-y_offset: -16
+x_offset: -43
+y_offset: -13
 #z_offset: 2.7
 pin_move_time: 0.4
 samples: 2
@@ -197,16 +198,16 @@ z_hop_speed: 10.0
 #*# pid_kd = 523.501
 #*#
 #*# [bltouch]
-#*# z_offset = 2.599
+#*# z_offset = 2.000
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.131250, -0.201250, -0.175000, -0.175000, -0.096250
-#*# 	  0.012500, -0.010000, -0.027500, -0.106250, -0.061250
-#*# 	  0.112500, 0.021250, -0.006250, 0.002500, 0.058750
-#*# 	  0.021250, -0.015000, 0.003750, -0.035000, 0.075000
-#*# 	  -0.035000, -0.086250, -0.073750, -0.067500, 0.013750
+#*# 	  0.016250, -0.137500, -0.257500, -0.347500, -0.498750
+#*# 	  0.145000, 0.101250, 0.023750, -0.151250, -0.428750
+#*# 	  0.237500, 0.147500, 0.075000, -0.050000, -0.282500
+#*# 	  0.166250, 0.102500, 0.045000, -0.102500, -0.302500
+#*# 	  0.076250, -0.001250, -0.040000, -0.161250, -0.293750
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
@@ -221,11 +222,11 @@ z_hop_speed: 10.0
 #*# [bed_mesh ender3]
 #*# version = 1
 #*# points =
-#*# 	  -0.131250, -0.201250, -0.175000, -0.175000, -0.096250
-#*# 	  0.012500, -0.010000, -0.027500, -0.106250, -0.061250
-#*# 	  0.112500, 0.021250, -0.006250, 0.002500, 0.058750
-#*# 	  0.021250, -0.015000, 0.003750, -0.035000, 0.075000
-#*# 	  -0.035000, -0.086250, -0.073750, -0.067500, 0.013750
+#*# 	  0.016250, -0.137500, -0.257500, -0.347500, -0.498750
+#*# 	  0.145000, 0.101250, 0.023750, -0.151250, -0.428750
+#*# 	  0.237500, 0.147500, 0.075000, -0.050000, -0.282500
+#*# 	  0.166250, 0.102500, 0.045000, -0.102500, -0.302500
+#*# 	  0.076250, -0.001250, -0.040000, -0.161250, -0.293750
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
