Added loading position

--- a/printer_menu.cfg
+++ b/printer_menu.cfg
@@ -18,6 +18,7 @@ name: Filament
 items:
     __temp __hotend0_current, __temp __hotend0_target
     .__preheat
+    .__loading_pos
     .__unload
     .__load
     .__feed
@@ -39,6 +40,13 @@ type: command
 name: Preheat 240c
 gcode:
         PREHEAT_LOAD
+
+[menu __filament __loading_pos]
+type: command
+name: Loading Position
+gcode:
+        LOADING_POS
+
 
 [menu __filament __unload]
 type: command
@@ -101,11 +109,16 @@ gcode:
 
 [gcode_macro PURGE]
 gcode:
-    M117 PURGING...
     M83
     G1 E20.0 F250
     G90
     M400
+
+[gcode_macro LOADING_POS]
+gcode:
+    G28
+    G1 X115 Z115 Z40
+
 
 [menu __calibration]
 type: list
@@ -145,10 +158,11 @@ items:
     .__toolhead_zpos
     .__testz_minus, .__testz_plus 
     .__testz_minus_minus, .__testz_plus_plus
-    .__testz_minus_1, .__testz_plus_1
     .__testz_minus_point_1, .__testz_plus_point_1
+    .__testz_minus_1, .__testz_plus_1
     .__accept
     .__abort
+    .__save_config
 
 
 [menu __calibration __probe_calibrate __toolhead_zpos]
