Resonance Calibration. Enabled input shaper to reduce ringing

--- a/printer.cfg
+++ b/printer.cfg
@@ -111,7 +111,9 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_35FFD5054153393022770157-if00
 [printer]
 kinematics: cartesian
 max_velocity: 300
-max_accel: 3000
+#max_accel: 3000
+max_accel: 7000
+max_accel_to_decel: 7000
 max_z_velocity: 5
 max_z_accel: 100
 
@@ -157,6 +159,12 @@ mesh_min: 50, 30
 mesh_max: 180, 205
 probe_count: 5,5
 mesh_pps: 2,2
+
+[input_shaper]
+shaper_freq_x: 33
+shaper_freq_y: 40
+shaper_type: mzv
+
 
 [gcode_macro G29]
 gcode:
