Added slow loading option for flexible filaments. Increased load and purge distance

--- a/printer_menu.cfg
+++ b/printer_menu.cfg
@@ -21,6 +21,7 @@ items:
     .__loading_pos
     .__unload
     .__load
+    .__load_slow
     .__feed
     .__cool
 
@@ -60,6 +61,13 @@ name: Load Filament
 gcode:
 	LOAD_FILAMENT
 
+[menu __filament __load_slow]
+type: command
+name: Slow Load Filament
+gcode:
+	LOAD_FILAMENT_SLOW
+
+
 [menu __filament __feed]
 type: command
 name: Purge Filament
@@ -87,10 +95,24 @@ gcode:
         M117 Loading Filament...
         M83
         G1 E60 F1000
-        G1 E60 F250
+        G1 E100 F250
         G92 E0.0
         M400
         M117 Load Complete
+
+[gcode_macro LOAD_FILAMENT_SLOW]
+gcode:
+        M117 Loading Filament...
+        M83
+	# Break up to avoid extrude-too-long and timeouts due to how long it takes to extrude
+        G1 E50 F250
+        G1 E50 F250
+        G1 E30 F100
+        G1 E30 F100
+        G92 E0.0
+        M400
+        M117 Load Complete
+
                        
 [gcode_macro UNLOAD_FILAMENT]
 gcode:
@@ -110,14 +132,14 @@ gcode:
 [gcode_macro PURGE]
 gcode:
     M83
-    G1 E20.0 F250
+    G1 E50.0 F250
     G90
     M400
 
 [gcode_macro LOADING_POS]
 gcode:
     G28
-    G1 X115 Z115 Z40
+    G1 X115 Z115 Z40 F6000
 
 
 [menu __calibration]
