Syntax updates since klipper upgrade

--- a/printer_menu.cfg
+++ b/printer_menu.cfg
@@ -1,80 +1,51 @@
 [menu __main]
 type: list
 name: Main Menu
-items:
-    __tune
-    __calibration
-    __octoprint
-    __sdcard
-    __control
-    __temp
-    __filament
-    __prepare
 
-
-[menu __filament]
+[menu __main __filament]
 type: list
 name: Filament
-items:
-    __temp __hotend0_current, __temp __hotend0_target
-    .__preheat
-    .__loading_pos
-    .__unload
-    .__load
-    .__load_slow
-    .__feed
-    .__cool
-
-[menu __tune __offsetz]
-type: input
-name: "Offset Z:{0:05.3f} "
-parameter: gcode.homing_zpos
-input_min: -5
-input_max: 5
-input_step: 0.005
-realtime: true
-gcode: SET_GCODE_OFFSET Z={0:.3f}
 
 
-[menu __filament __preheat]
+[menu __main __filament __preheat]
 type: command
 name: Preheat 240c
 gcode:
         PREHEAT_LOAD
 
-[menu __filament __loading_pos]
+[menu __main __filament __loading_pos]
 type: command
 name: Loading Position
 gcode:
         LOADING_POS
 
 
-[menu __filament __unload]
+[menu __main __filament __unload]
 type: command
 name: Unload Filament
 gcode:
 	UNLOAD_FILAMENT
 
-[menu __filament __load]
+[menu __main __filament __load]
 type: command
 name: Load Filament
 gcode:
 	LOAD_FILAMENT
 
-[menu __filament __load_slow]
+[menu __main __filament __load_slow]
 type: command
 name: Slow Load Filament
 gcode:
 	LOAD_FILAMENT_SLOW
 
 
-[menu __filament __feed]
+[menu __main __filament __feed]
 type: command
 name: Purge Filament
 gcode:
        PURGE
 
-[menu __filament __cool]
+[menu __main __filament __cool]
 type: command
 name: Cool Hotend
 gcode:
@@ -142,126 +113,22 @@ gcode:
     G1 X115 Z115 Z40 F6000
 
 
-[menu __calibration]
+[menu __main __calibration]
 type: list
 name: Calibration
-items:
-    .__bed_mesh_calibrate
-    .__probe_calibrate
 
-[menu __calibration __bed_mesh_calibrate]
+[menu __main __calibration __bed_mesh_calibrate]
 type: command
 name: Generate bed mesh
 gcode:
 	COMMIT_BED_MESH
 
 ### menu prepare ###
-[menu __prepare]
+[menu __main __prepare]
 type: list
 enable: !toolhead.is_printing
 name: Prepare
-items:
-    .__bedprobe
-    .__hotend_pid_tuning
-    .__hotbed_pid_tuning
-    .__host_restart
-    .__firmware_restart
 
 
 
-[menu __calibration __probe_calibrate]
-type: list
-name: Adjust Z offset
-enter_gcode:
-    G28
-    G0 Z10 F6000
-    PROBE_CALIBRATE
-items:
-    .__toolhead_zpos
-    .__testz_minus, .__testz_plus 
-    .__testz_minus_minus, .__testz_plus_plus
-    .__testz_minus_point_1, .__testz_plus_point_1
-    .__testz_minus_1, .__testz_plus_1
-    .__accept
-    .__abort
-    .__save_config
 
-
-[menu __calibration __probe_calibrate __toolhead_zpos]
-type: item
-width: 16
-name: "Z = {0:.3f}"
-cursor: \x20
-parameter: toolhead.zpos
-
-[menu __calibration __probe_calibrate __testz_minus]
-cursor: \x20
-type: command
-width: 7
-name: "   -"
-gcode: TESTZ Z=-
-
-[menu __calibration __probe_calibrate __testz_plus]
-cursor: \x20
-type: command
-name: "   +"
-width: 7
-gcode: TESTZ Z=+
-
-[menu __calibration __probe_calibrate __testz_minus_minus]
-cursor: \x20
-type: command
-name: "   --"
-width: 7
-gcode: TESTZ Z=--
-
-[menu __calibration __probe_calibrate __testz_plus_plus]
-cursor: \x20
-type: command
-name: "   ++"
-width: 7
-gcode: TESTZ Z=++
-
-[menu __calibration __probe_calibrate __testz_minus_1]
-cursor: \x20
-type: command
-name: "  -1.0"
-width: 7
-gcode: TESTZ Z=-1
-
-[menu __calibration __probe_calibrate __testz_plus_1]
-cursor: \x20
-type: command
-name: "  +1.0"
-width: 7
-gcode: TESTZ Z=+1
-
-[menu __calibration __probe_calibrate __testz_minus_point_1]
-cursor: \x20
-type: command
-name: "  -0.1"
-width: 7
-gcode: TESTZ Z=-0.1
-
-[menu __calibration __probe_calibrate __testz_plus_point_1]
-cursor: \x20
-type: command
-name: "  +0.1"
-width: 7
-gcode: TESTZ Z=+0.1
-
-[menu __calibration __probe_calibrate __accept]
-type: command
-name: Accept
-gcode: ACCEPT
-
-[menu __calibration __probe_calibrate __abort]
-type: command
-name: Abort
-gcode: ABORT
-action: back
-
-[menu __calibration __probe_calibrate __save_config]
-type: command
-name: Save config
-gcode: SAVE_CONFIG
