Initial config for fluidd

--- a/printer.cfg
+++ b/printer.cfg
@@ -184,6 +184,11 @@ speed: 80.0
 z_hop: 10.0
 z_hop_speed: 10.0
 
+[virtual_sdcard]
+path: ~/gcode_files
+
+[force_move]
+enable_force_move: True
 
 [include printer_menu.cfg]
 
