--- a/printer.cfg
+++ b/printer.cfg
@@ -1,3 +1,5 @@
+##### AUTOCREATED BY KIAUH #####
+[include kiauh.cfg]
 # This file contains common pin mappings for the BIGTREETECH SKR mini
 # E3 v1.2. To use this config, the firmware should be compiled for the
 # STM32F103 with a "28KiB bootloader". Also, select "Enable extra
@@ -190,6 +192,43 @@ path: ~/gcode_files
 [force_move]
 enable_force_move: True
 
+[display_status]
+
+[pause_resume]
+
+[gcode_macro PAUSE]
+rename_existing: BASE_PAUSE
+default_parameter_X: 230    # edit to your preferred park position
+default_parameter_Y: 230    # edit to your preferred park position
+default_parameter_Z: 10     # edit to your preferred park position
+default_parameter_E: 1      # edit to your preferred retract length
+gcode:
+    SAVE_GCODE_STATE NAME=PAUSE_state
+    BASE_PAUSE
+    G91
+    G1 E-{E} F2100
+    G1 Z{Z}
+    G90
+    G1 X{X} Y{Y} F6000
+
+[gcode_macro RESUME]
+rename_existing: BASE_RESUME
+default_parameter_E: 1      # edit to your preferred retract length
+gcode:
+    G91
+    G1 E{E} F2100
+    G90
+    RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
+    BASE_RESUME
+    
+    
+[gcode_macro CANCEL_PRINT]
+rename_existing: BASE_CANCEL_PRINT
+gcode:
+    TURN_OFF_HEATERS
+    CLEAR_PAUSE
+    SDCARD_RESET_FILE
+    BASE_CANCEL_PRINT
 [include printer_menu.cfg]
 
 
