Clean and refactor config files

--- a/moonraker.conf
+++ b/moonraker.conf
@@ -4,6 +4,8 @@ port: 7125
 enable_debug_logging: True
 config_path: ~/klipper_config
 
+[octoprint_compat]
+
 [authorization]
 enabled: True
 cors_domains:
