--- a/printer.cfg
+++ b/printer.cfg
@@ -13,84 +13,8 @@
 
 # See the example.cfg file for a description of available parameters.
 
-[stepper_x]
-step_pin: PB13
-dir_pin: !PB12
-enable_pin: !PB14
-step_distance: .0125
-endstop_pin: ^PC0
-position_endstop: 0
-position_max: 235
-homing_speed: 50
+[include printer_stepper.cfg]
 
-[tmc2209 stepper_x]
-uart_pin: PB15
-microsteps: 16
-run_current: 0.580
-hold_current: 0.500
-stealthchop_threshold: 250
-
-[stepper_y]
-step_pin: PB10
-dir_pin: !PB2
-enable_pin: !PB11
-step_distance: .0125
-endstop_pin: ^PC1
-position_endstop: -9
-position_min: -9
-position_max: 235
-homing_speed: 50
-
-[tmc2209 stepper_y]
-uart_pin: PC6
-microsteps: 16
-run_current: 0.580
-hold_current: 0.500
-stealthchop_threshold: 250
-
-[stepper_z]
-step_pin: PB0
-dir_pin: PC5
-enable_pin: !PB1
-step_distance: .0025
-endstop_pin:probe:z_virtual_endstop
-position_max: 250
-position_min: -3
-
-
-[tmc2209 stepper_z]
-uart_pin: PC10
-microsteps: 16
-run_current: 0.800
-hold_current: 0.750
-stealthchop_threshold: 5
-
-[extruder]
-step_pin: PB3
-dir_pin: !PB4
-enable_pin: !PD2
-step_distance: 0.002415
-nozzle_diameter: 0.400
-filament_diameter: 1.750
-heater_pin: PC8
-sensor_type: NTC 100K beta 3950
-sensor_pin: PA0
-#control: pid
-#pid_Kp: 21.527
-#pid_Ki: 1.063
-#pid_Kd: 108.982
-min_temp: 0
-max_temp: 275
-pressure_advance: 0.105
-max_extrude_only_distance:150
-
-
-[tmc2209 extruder]
-uart_pin: PC11
-microsteps: 16
-run_current: 0.650
-hold_current: 0.500
-stealthchop_threshold: 5
 
 [heater_bed]
 heater_pin: PC9
@@ -113,9 +37,8 @@ serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_35FFD5054153393022770157-if00
 [printer]
 kinematics: cartesian
 max_velocity: 300
-#max_accel: 3000
-max_accel: 7000
-max_accel_to_decel: 7000
+max_accel: 5000
+max_accel_to_decel: 5000
 max_z_velocity: 5
 max_z_accel: 100
 
@@ -167,18 +90,6 @@ shaper_freq_x: 33
 shaper_freq_y: 40
 shaper_type: mzv
 
-
-[gcode_macro G29]
-gcode:
-    BED_MESH_PROFILE LOAD=ender3
-
-[gcode_macro COMMIT_BED_MESH]
-gcode:
-    g28
-    BED_MESH_CALIBRATE
-    BED_MESH_PROFILE SAVE=ender3
-    SAVE_CONFIG
-
 	
 [safe_z_home]
 home_xy_position: 155,120
@@ -196,39 +107,8 @@ enable_force_move: True
 
 [pause_resume]
 
-[gcode_macro PAUSE]
-rename_existing: BASE_PAUSE
-default_parameter_X: 230    # edit to your preferred park position
-default_parameter_Y: 230    # edit to your preferred park position
-default_parameter_Z: 10     # edit to your preferred park position
-default_parameter_E: 1      # edit to your preferred retract length
-gcode:
-    SAVE_GCODE_STATE NAME=PAUSE_state
-    BASE_PAUSE
-    G91
-    G1 E-{E} F2100
-    G1 Z{Z}
-    G90
-    G1 X{X} Y{Y} F6000
+[include printer_macros.cfg]
 
-[gcode_macro RESUME]
-rename_existing: BASE_RESUME
-default_parameter_E: 1      # edit to your preferred retract length
-gcode:
-    G91
-    G1 E{E} F2100
-    G90
-    RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
-    BASE_RESUME
-    
-    
-[gcode_macro CANCEL_PRINT]
-rename_existing: BASE_CANCEL_PRINT
-gcode:
-    TURN_OFF_HEATERS
-    CLEAR_PAUSE
-    SDCARD_RESET_FILE
-    BASE_CANCEL_PRINT
 [include printer_menu.cfg]
 
 
@@ -250,16 +130,16 @@ gcode:
 #*# pid_kd = 523.501
 #*#
 #*# [bltouch]
-#*# z_offset = 2.400
+#*# z_offset = 2.200
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.140000, -0.011250, -0.217500, -0.380000, -0.590000
-#*# 	  0.373750, 0.198750, 0.005000, -0.147500, -0.358750
-#*# 	  0.480000, 0.296250, 0.083750, -0.053750, -0.232500
-#*# 	  0.512500, 0.366250, 0.205000, 0.075000, -0.121250
-#*# 	  0.521250, 0.398750, 0.257500, 0.145000, -0.052500
+#*# 	  0.048750, 0.010000, -0.031250, -0.038750, -0.036250
+#*# 	  0.175000, 0.115000, 0.043750, 0.050000, 0.065000
+#*# 	  0.190000, 0.126250, 0.035000, 0.005000, 0.068750
+#*# 	  0.157500, 0.108750, 0.065000, 0.063750, 0.033750
+#*# 	  0.092500, 0.072500, 0.010000, -0.003750, -0.001250
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
@@ -274,11 +154,11 @@ gcode:
 #*# [bed_mesh ender3]
 #*# version = 1
 #*# points =
-#*# 	  0.140000, -0.011250, -0.217500, -0.380000, -0.590000
-#*# 	  0.373750, 0.198750, 0.005000, -0.147500, -0.358750
-#*# 	  0.480000, 0.296250, 0.083750, -0.053750, -0.232500
-#*# 	  0.512500, 0.366250, 0.205000, 0.075000, -0.121250
-#*# 	  0.521250, 0.398750, 0.257500, 0.145000, -0.052500
+#*# 	  0.048750, 0.010000, -0.031250, -0.038750, -0.036250
+#*# 	  0.175000, 0.115000, 0.043750, 0.050000, 0.065000
+#*# 	  0.190000, 0.126250, 0.035000, 0.005000, 0.068750
+#*# 	  0.157500, 0.108750, 0.065000, 0.063750, 0.033750
+#*# 	  0.092500, 0.072500, 0.010000, -0.003750, -0.001250
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
