--- a/printer_menu.cfg
+++ b/printer_menu.cfg
@@ -52,66 +52,6 @@ gcode:
        COOL_LOAD
 
 
-[gcode_macro PREHEAT_LOAD]
-gcode:
-        m104 S240
-
-[gcode_macro COOL_LOAD]
-gcode:
-        m104 S0
-
-
-[gcode_macro LOAD_FILAMENT]
-gcode:
-        M117 Loading Filament...
-        M83
-        G1 E60 F1000
-        G1 E100 F250
-        G92 E0.0
-        M400
-        M117 Load Complete
-
-[gcode_macro LOAD_FILAMENT_SLOW]
-gcode:
-        M117 Loading Filament...
-        M83
-	# Break up to avoid extrude-too-long and timeouts due to how long it takes to extrude
-        G1 E50 F250
-        G1 E50 F250
-        G1 E30 F100
-        G1 E30 F100
-        G92 E0.0
-        M400
-        M117 Load Complete
-
-                       
-[gcode_macro UNLOAD_FILAMENT]
-gcode:
-        M117 Unloading Filament...
-        M83
-        G1 E0.5 F1000
-        G1 E-0.5 F1000
-        G1 E1.0 F1000
-        G1 E-1.0 F1000
-        G1 E1.5 F1000
-        G1 E-1.5 F1000
-        G1 E2.0 F1000
-        G1 E-120 F1000
-        M117 Remove Filament Now!
-        M400
-
-[gcode_macro PURGE]
-gcode:
-    M83
-    G1 E50.0 F250
-    G90
-    M400
-
-[gcode_macro LOADING_POS]
-gcode:
-    G28
-    G1 X115 Z115 Z40 F6000
-
 
 [menu __main __calibration]
 type: list
@@ -126,7 +66,7 @@ gcode:
 ### menu prepare ###
 [menu __main __prepare]
 type: list
-enable: !toolhead.is_printing
+#enable: !printer.toolhead.is_printing
 name: Prepare
 
 
