Preheat automatically on load and before generating mesh

--- a/printer_macros.cfg
+++ b/printer_macros.cfg
@@ -94,3 +94,14 @@ gcode:
 gcode:
     G28
     G1 X115 Z115 Z40 F6000
+    
+[gcode_macro G29]
+gcode:
+    BED_MESH_PROFILE LOAD=ender3
+
+[gcode_macro COMMIT_BED_MESH]
+gcode:
+    g28
+    BED_MESH_CALIBRATE
+    BED_MESH_PROFILE SAVE=ender3
+    SAVE_CONFIG
