Moved cfg files

--- a/klipper_config/printer_menu.cfg
+++ b/klipper_config/printer_menu.cfg
@@ -17,7 +17,7 @@ gcode:
 type: command
 name: Loading Position
 gcode:
-        LOADING_POS
+        HEAT_AND_MOVE_TO_LOAD
 
 
 [menu __main __filament __unload]
