--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -117,7 +117,7 @@ enable_force_move: True
 
 [include printer_menu.cfg]
 
-[include printer_pi_mcu.cfg]
+#[include printer_pi_mcu.cfg]
 
 
 # See the sample-lcd.cfg file for definitions of common LCD displays.
