--- a/klipper_config/printer_macros.cfg
+++ b/klipper_config/printer_macros.cfg
@@ -46,7 +46,6 @@ gcode:
 
 [gcode_macro LOAD_FILAMENT]
 gcode:
-        SET_FILAMENT_SENSOR SENSOR=RunoutSensor ENABLE=1
         M117 Loading Filament...
         M83
         G1 E60 F1000
@@ -91,9 +90,16 @@ gcode:
     G90
     M400
 
-[gcode_macro HEAT_AND_MOVE_TO_LOAD]
+[gcode_macro RUNOUT_ON]
+gcode:
+    SET_FILAMENT_SENSOR SENSOR=RunoutSensor ENABLE=1
+
+[gcode_macro RUNOUT_OFF]
 gcode:
     SET_FILAMENT_SENSOR SENSOR=RunoutSensor ENABLE=0
+
+[gcode_macro HEAT_AND_MOVE_TO_LOAD]
+gcode:
     M104 S240
     {% if printer.homed_axes != 'XYZ' %}
         g28
@@ -108,6 +114,10 @@ gcode:
 [gcode_macro G29]
 gcode:
     BED_MESH_PROFILE LOAD=ender3
+    
+[gcode_macro M600]
+gcode:
+    PAUSE
 
 [gcode_macro COMMIT_BED_MESH]
 gcode:
