--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -1,25 +1,23 @@
 ##### AUTOCREATED BY KIAUH #####
 [include kiauh.cfg]
-# This file contains common pin mappings for the BIGTREETECH SKR mini
-# E3 v1.2. To use this config, the firmware should be compiled for the
-# STM32F103 with a "28KiB bootloader". Also, select "Enable extra
-# low-level configuration options" and configure "GPIO pins to set at
-# micro-controller startup" to "!PC13".
+# This file contains common pin mappings for the BigTreeTech SKR 2.
+# To use this config, the firmware should be compiled for the
+# STM32F407 with a "32KiB bootloader".
 
-# The "make flash" command does not work on the SKR mini E3. Instead,
+# The "make flash" command does not work on the SKR 2. Instead,
 # after running "make", copy the generated "out/klipper.bin" file to a
-# file named "firmware.bin" on an SD card and then restart the SKR
-# mini E3 with that SD card.
+# file named "firmware.bin" on an SD card and then restart the SKR 2
+# with that SD card.
 
-# See the example.cfg file for a description of available parameters.
+# See docs/Config_Reference.md for a description of parameters.
 
 [include printer_stepper.cfg]
 
 
 [heater_bed]
-heater_pin: PC9
+heater_pin: PD7
 sensor_type: ATC Semitec 104GT-2
-sensor_pin: PC3
+sensor_pin: PA1
 #control: pid
 #pid_Kp: 54.027
 #pid_Ki: 0.770
@@ -28,12 +26,21 @@ min_temp: 0
 max_temp: 130
 
 [fan]
-pin: PA8
+pin: PB7
+
+[heater_fan fan1]
+pin: PB6
+heater: extruder
+heater_temp: 50.0
+fan_speed: 1.0
+
+[output_pin motor_power]
+pin: PC13
+value: 1
 
 [mcu]
 baud: 250000
-serial: /dev/serial/by-id/usb-Klipper_stm32f103xe_35FFD5054153393022770157-if00
-
+serial: /dev/serial/by-id/usb-Klipper_stm32f407xx_22002E000E47393437303337-if00
 [printer]
 kinematics: cartesian
 max_velocity: 300
@@ -42,14 +49,17 @@ max_accel_to_decel: 5000
 max_z_velocity: 5
 max_z_accel: 100
 
-[static_digital_output usb_pullup_enable]
-pins: !PC13
+#[static_digital_output usb_pullup_enable]
+#pins: !PC13
 
 [board_pins]
 aliases:
     # EXP1 header
-    EXP1_1=PB5, EXP1_3=PA9,   EXP1_5=PA10, EXP1_7=PB8, EXP1_9=<GND>,
-    EXP1_2=PB6, EXP1_4=<RST>, EXP1_6=PB9,  EXP1_8=PB7, EXP1_10=<5V>
+    EXP1_1=PC5, EXP1_3=PB1, EXP1_5=PE10, EXP1_7=PE12, EXP1_9=<GND>,
+    EXP1_2=PB0, EXP1_4=PE9, EXP1_6=PE11, EXP1_8=PE13, EXP1_10=<5V>,
+    # EXP2 header
+    EXP2_1=PA6, EXP2_3=PE7, EXP2_5=PB2, EXP2_7=PC4,   EXP2_9=<GND>,
+    EXP2_2=PA5, EXP2_4=PA4, EXP2_6=PA7, EXP2_8=<RST>, EXP2_10=<NC>
 
 [display]
 lcd_type: st7920
@@ -60,12 +70,12 @@ encoder_pins: ^EXP1_5, ^EXP1_3
 click_pin: ^!EXP1_2
 #kill_pin: ^!EXP2_8
 
-[output_pin beeper]
-pin: EXP1_1
+#[output_pin beeper]
+#pin: EXP1_1
 
 [bltouch]
-sensor_pin: ^PC2
-control_pin: PA1
+sensor_pin: ^PE4
+control_pin: PE5
 pin_up_touch_mode_reports_triggered: False
 x_offset: -43
 y_offset: -13
