--- a/klipper_config/printer_stepper.cfg
+++ b/klipper_config/printer_stepper.cfg
@@ -1,65 +1,66 @@
 [stepper_x]
-step_pin: PB13
-dir_pin: !PB12
-enable_pin: !PB14
-step_distance: .0125
-endstop_pin: ^PC0
+step_pin: PE2
+dir_pin: !PE1
+enable_pin: !PE3
+microsteps: 16
+rotation_distance: 40
+endstop_pin: ^PC1
 position_endstop: 0
 position_max: 235
 homing_speed: 50
 
 [tmc2209 stepper_x]
-uart_pin: PB15
-microsteps: 16
+uart_pin: PE0
 run_current: 0.700
 hold_current: 0.500
 stealthchop_threshold: 250
 
 [stepper_y]
-step_pin: PB10
-dir_pin: !PB2
-enable_pin: !PB11
-step_distance: .0125
-endstop_pin: ^PC1
+step_pin: PD5
+dir_pin: !PD4
+enable_pin: !PD6
+microsteps: 16
+rotation_distance: 40
+endstop_pin: ^PC3
 position_endstop: -9
 position_min: -9
 position_max: 235
 homing_speed: 50
 
 [tmc2209 stepper_y]
-uart_pin: PC6
-microsteps: 16
+uart_pin: PD3
 run_current: 0.580
 hold_current: 0.500
 stealthchop_threshold: 250
 
 [stepper_z]
-step_pin: PB0
-dir_pin: PC5
-enable_pin: !PB1
-step_distance: .0025
+step_pin: PA15
+dir_pin: PA8
+enable_pin: !PD1
+microsteps: 16
+rotation_distance: 8
 endstop_pin:probe:z_virtual_endstop
 position_max: 250
 position_min: -3
 
 
 [tmc2209 stepper_z]
-uart_pin: PC10
-microsteps: 16
+uart_pin: PD0
 run_current: 0.800
 hold_current: 0.750
 stealthchop_threshold: 5
 
 [extruder]
-step_pin: PB3
-dir_pin: !PB4
-enable_pin: !PD2
-step_distance: 0.002415
+step_pin: PD15
+dir_pin: !PD14
+enable_pin: !PC7
+microsteps: 16
+rotation_distance: 7.728
 nozzle_diameter: 0.400
 filament_diameter: 1.750
-heater_pin: PC8
+heater_pin: PB3
 sensor_type: NTC 100K beta 3950
-sensor_pin: PA0
+sensor_pin: PA2
 #control: pid
 #pid_Kp: 21.527
 #pid_Ki: 1.063
@@ -71,8 +72,7 @@ max_extrude_only_distance:150
 
 
 [tmc2209 extruder]
-uart_pin: PC11
-microsteps: 16
+uart_pin: PD12
 run_current: 0.650
 hold_current: 0.500
 stealthchop_threshold: 5
