Some fine tuning post skr 2. Still dont know why i had to double step distance

--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -132,6 +132,9 @@ enable_force_move: True
 
 # See the sample-lcd.cfg file for definitions of common LCD displays.
 
+# Larger = Lower z offset
+# z_offset = 2.15
+
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
@@ -148,16 +151,16 @@ enable_force_move: True
 #*# pid_kd = 523.501
 #*#
 #*# [bltouch]
-#*# z_offset = 2.05
+#*# z_offset = 2.15
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.373750, 0.203750, 0.036250, -0.145000, -0.300000
-#*# 	0.467500, 0.260000, 0.052500, -0.098750, -0.188750
-#*# 	0.478750, 0.283750, 0.073750, -0.077500, -0.177500
-#*# 	0.487500, 0.278750, 0.100000, -0.043750, -0.186250
-#*# 	0.422500, 0.261250, 0.096250, -0.060000, -0.193750
+#*# 	  0.108750, 0.036250, -0.016250, -0.100000, -0.172500
+#*# 	  0.201250, 0.091250, -0.001250, -0.035000, -0.061250
+#*# 	  0.202500, 0.117500, 0.018750, -0.022500, -0.053750
+#*# 	  0.205000, 0.113750, 0.051250, 0.020000, -0.060000
+#*# 	  0.148750, 0.076250, 0.021250, -0.016250, -0.068750
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
@@ -172,11 +175,11 @@ enable_force_move: True
 #*# [bed_mesh ender3]
 #*# version = 1
 #*# points =
-#*# 	0.373750, 0.203750, 0.036250, -0.145000, -0.300000
-#*# 	0.467500, 0.260000, 0.052500, -0.098750, -0.188750
-#*# 	0.478750, 0.283750, 0.073750, -0.077500, -0.177500
-#*# 	0.487500, 0.278750, 0.100000, -0.043750, -0.186250
-#*# 	0.422500, 0.261250, 0.096250, -0.060000, -0.193750
+#*# 	  0.108750, 0.036250, -0.016250, -0.100000, -0.172500
+#*# 	  0.201250, 0.091250, -0.001250, -0.035000, -0.061250
+#*# 	  0.202500, 0.117500, 0.018750, -0.022500, -0.053750
+#*# 	  0.205000, 0.113750, 0.051250, 0.020000, -0.060000
+#*# 	  0.148750, 0.076250, 0.021250, -0.016250, -0.068750
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
