--- a/klipper_config/printer_stepper.cfg
+++ b/klipper_config/printer_stepper.cfg
@@ -55,7 +55,9 @@ step_pin: PD15
 dir_pin: !PD14
 enable_pin: !PC7
 microsteps: 16
-rotation_distance: 7.728
+#step_distance: 0.002415
+step_distance: 0.00483
+#full_steps_per_rotation: 200 # Dont know why, i need to double steps per mm to get sane values
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: PB3
@@ -75,4 +77,5 @@ max_extrude_only_distance:150
 uart_pin: PD12
 run_current: 0.650
 hold_current: 0.500
-stealthchop_threshold: 5
+#stealthchop_threshold: 5
+stealthchop_threshold: 999999
