Added z offset notes

--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -132,8 +132,10 @@ enable_force_move: True
 
 # See the sample-lcd.cfg file for definitions of common LCD displays.
 
-# Larger = Lower z offset
-# z_offset = 2.15
+# Larger = increases squish
+# Nozzle too close to bed = -0.1
+# Nozzle too far from bed = +0.1 
+# z_offset = 2.2
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
@@ -151,16 +153,16 @@ enable_force_move: True
 #*# pid_kd = 523.501
 #*#
 #*# [bltouch]
-#*# z_offset = 2.15
+#*# z_offset = 2.35
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.108750, 0.036250, -0.016250, -0.100000, -0.172500
-#*# 	  0.201250, 0.091250, -0.001250, -0.035000, -0.061250
-#*# 	  0.202500, 0.117500, 0.018750, -0.022500, -0.053750
-#*# 	  0.205000, 0.113750, 0.051250, 0.020000, -0.060000
-#*# 	  0.148750, 0.076250, 0.021250, -0.016250, -0.068750
+#*# 	  0.160000, 0.115000, 0.078750, 0.056250, 0.098750
+#*# 	  0.153750, 0.103750, 0.035000, 0.062500, 0.186250
+#*# 	  0.091250, 0.045000, -0.018750, 0.017500, 0.142500
+#*# 	  -0.046250, -0.072500, -0.070000, -0.037500, 0.042500
+#*# 	  -0.221250, -0.201250, -0.190000, -0.148750, -0.052500
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
@@ -175,11 +177,11 @@ enable_force_move: True
 #*# [bed_mesh ender3]
 #*# version = 1
 #*# points =
-#*# 	  0.108750, 0.036250, -0.016250, -0.100000, -0.172500
-#*# 	  0.201250, 0.091250, -0.001250, -0.035000, -0.061250
-#*# 	  0.202500, 0.117500, 0.018750, -0.022500, -0.053750
-#*# 	  0.205000, 0.113750, 0.051250, 0.020000, -0.060000
-#*# 	  0.148750, 0.076250, 0.021250, -0.016250, -0.068750
+#*# 	  0.160000, 0.115000, 0.078750, 0.056250, 0.098750
+#*# 	  0.153750, 0.103750, 0.035000, 0.062500, 0.186250
+#*# 	  0.091250, 0.045000, -0.018750, 0.017500, 0.142500
+#*# 	  -0.046250, -0.072500, -0.070000, -0.037500, 0.042500
+#*# 	  -0.221250, -0.201250, -0.190000, -0.148750, -0.052500
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
