Added telegram bot

--- a/klipper_config/printer.cfg
+++ b/klipper_config/printer.cfg
@@ -135,7 +135,9 @@ enable_force_move: True
 # Larger = increases squish
 # Nozzle too close to bed = -0.1
 # Nozzle too far from bed = +0.1 
-# z_offset = 2.2
+# To store a z offset from main control gui
+# cur_zoffset -= offset from main gui
+# z_offset = 2.1
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
