--- a/klipper_config/moonraker.conf
+++ b/klipper_config/moonraker.conf
@@ -6,6 +6,17 @@ config_path: ~/klipper_config
 
 [octoprint_compat]
 
+[update_manager]
+enable_auto_refresh: True
+
+[update_manager client moonraker-telegram]
+type: git_repo
+path: /home/pi/moonraker-telegram
+origin: https://github.com/Raabi91/moonraker-telegram.git
+env: /home/pi/.moonraker-telegram-env/bin/python
+requirements: scripts/moonraker-telegram-requirements.txt
+install_script: scripts/install.sh
+
 [authorization]
 enabled: True
 cors_domains:
