Some minor updates

--- a/klipper_config/moonraker.conf
+++ b/klipper_config/moonraker.conf
@@ -26,6 +26,9 @@ cors_domains:
   https://app.fluidd.xyz
   http://192.168.1.199:5000
   https://192.168.1.199:5000
+  *:7136
+  *.local:7136
+
 trusted_clients:
  10.0.0.0/8
  127.0.0.0/8
@@ -35,5 +38,15 @@ trusted_clients:
  192.168.1.0/24
  100.67.109.100
  100.120.253.111
+ 100.75.196.36
+ 100.122.3.17
  FE80::/10
  ::1/128
+
+
+#[power tplink]
+#type: tplink_smartplug
+#restart_klipper_when_powered: True
+#restart_delay: 1.
+#address: 192.168.1.197	
+#port: 9999
