--- a/klipper_config/printer_macros.cfg
+++ b/klipper_config/printer_macros.cfg
@@ -1,11 +1,10 @@
 
 [gcode_macro PAUSE]
 rename_existing: BASE_PAUSE
-default_parameter_X: 230    # edit to your preferred park position
-default_parameter_Y: 230    # edit to your preferred park position
-default_parameter_Z: 10     # edit to your preferred park position
-default_parameter_E: 1      # edit to your preferred retract length
 gcode:
+    {% set X = params.X|default(50)|float %}
+    {% set Y = params.Y|default(0)|float %}
+    {% set Z = params.Z|default(10)|float %}
     SAVE_GCODE_STATE NAME=PAUSE_state
     BASE_PAUSE
     G91
@@ -16,7 +15,6 @@ gcode:
 
 [gcode_macro RESUME]
 rename_existing: BASE_RESUME
-default_parameter_E: 1      # edit to your preferred retract length
 gcode:
     G91
     G1 E{E} F2100
@@ -129,3 +127,16 @@ gcode:
     BED_MESH_CALIBRATE
     BED_MESH_PROFILE SAVE=ender3
     SAVE_CONFIG
+
+
+#[gcode_macro POWER_OFF_PRINTER]
+#gcode:
+#  {action_call_remote_method("set_device_power",
+#                             device="tplink",
+#                             state="off")}
+#
+#[gcode_macro POWER_ON_PRINTER]
+#gcode:
+#  {action_call_remote_method("set_device_power",
+#                             device="tplink",
+#                             state="on")}       
