--- a/klipper_config/printer_stepper.cfg
+++ b/klipper_config/printer_stepper.cfg
@@ -56,7 +56,9 @@ dir_pin: !PD14
 enable_pin: !PC7
 microsteps: 16
 #step_distance: 0.002415
-step_distance: 0.00483
+rotation_distance: 7.728
+# This was the last working value before forced to rotation distance
+#step_distance: 0.00483
 #full_steps_per_rotation: 200 # Dont know why, i need to double steps per mm to get sane values
 nozzle_diameter: 0.600
 filament_diameter: 1.750
