--- a/klipper_config/printer_macros.cfg
+++ b/klipper_config/printer_macros.cfg
@@ -116,17 +116,86 @@ gcode:
 
 [gcode_macro COMMIT_BED_MESH]
 gcode:
-    M140 S70
     
     {% if printer.homed_axes != 'XYZ' %}
         g28
     {% endif %}
-
-    M190 S70
+    Z_TILT_ADJUST
     G4 S60
     BED_MESH_CALIBRATE
     BED_MESH_PROFILE SAVE=ender3
     SAVE_CONFIG
+
+[gcode_macro COMMIT_BED_MESH_HOT]
+gcode:
+    M140 S70
+    M190 S70
+    COMMIT_BED_MESH
+
+
+[gcode_macro START_PRINT]
+gcode:
+    {% set BED_TEMP = params.BED_TEMP|default(50)|float %}
+    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(180)|float %}
+    
+    # Start bed heating
+    M140 S{BED_TEMP}
+    # Set extruder temperature to below melting point
+    M104 S150
+    # Load mesh profile
+    BED_MESH_PROFILE LOAD=ender3
+    # Reset the G-Code Z offset (adjust Z offset if needed)
+    #SET_GCODE_OFFSET Z=0.0
+    # Set to absolute positioning
+    G90
+    # Home the printer if required
+    {% if "x" not in printer.toolhead.homed_axes or "y" not in printer.toolhead.homed_axes %}
+    G28 X Y
+    {% endif %}
+    # Wait for bed to reach temperature
+    M190 S{BED_TEMP}
+    
+    # Set extruder temperature
+    M104 S{EXTRUDER_TEMP}
+
+    # Home Z and Level gantry if required
+    {% if "z" not in printer.toolhead.homed_axes %}
+    G28 Z
+    Z_TILT_ADJUST
+    {% endif %}
+    # Set to absolute positioning again after homing
+    G90
+    # Move to start position
+    G1 X0 Y0 F300.0;
+    G1 Z0 F300.0;
+
+    # Wait for Extruder temperature
+    M109 S{EXTRUDER_TEMP}
+    #Reset Extruder
+    G92 E0
+
+    # Purge line, starting from bottom left moving up, start slow, speed up to pull any stray strands, end 
+    # with a coast
+    G1 Z0.0 F300.0; 
+    G1 Y90 E15.0  F1000.0 ; start slow
+    G1 Y180 E30.0  F2000.0 ; speed up to pull any stray strands
+    G1 Y200 E30.0  F2000.0 ; end with a coast
+
+
+[gcode_macro END_PRINT]
+gcode:
+    # Turn off bed, extruder, and fan
+    M140 S0
+    M104 S0
+    M106 S0
+    # Move nozzle away from print while retracting
+    G91 ; relative mode
+    G1 X-2 Y-2 E-3 F300
+    # Raise nozzle by 10mm
+    G1 Z10 F3000
+    G90 ; absolute mode
+    # Disable steppers
+    M84
 
 
 #[gcode_macro POWER_OFF_PRINTER]
