Added second z driver control and z tilt

--- a/klipper_config/printer_stepper.cfg
+++ b/klipper_config/printer_stepper.cfg
@@ -13,7 +13,7 @@ homing_speed: 50
 uart_pin: PE0
 run_current: 0.580
 hold_current: 0.500
-stealthchop_threshold: 250
+#stealthchop_threshold: 250
 
 [stepper_y]
 step_pin: PD5
@@ -42,13 +42,36 @@ rotation_distance: 8
 endstop_pin:probe:z_virtual_endstop
 position_max: 250
 position_min: -3
-
+homing_speed: 200
 
 [tmc2209 stepper_z]
 uart_pin: PD0
-run_current: 0.800
-hold_current: 0.750
-stealthchop_threshold: 5
+run_current: 0.600
+hold_current: 0.50
+#stealthchop_threshold: 5
+
+[stepper_z1]
+step_pin: PD11
+dir_pin: !PD10
+enable_pin: !PD13
+microsteps: 16
+rotation_distance: 8
+
+[tmc2209 stepper_z1]
+uart_pin: PD12
+run_current: 0.600
+hold_current: 0.50
+
+
+[z_tilt]
+z_positions:
+    2, 112
+    247, 112
+points:
+    42, 112
+    234, 112
+speed: 120
+horizontal_move_z: 8
 
 [extruder]
 step_pin: PD15
@@ -76,7 +99,7 @@ max_extrude_only_distance:150
 
 
 [tmc2209 extruder]
-uart_pin: PD12
+uart_pin: PC6
 run_current: 0.500
 hold_current: 0.500
 #stealthchop_threshold: 5
