Changed z tilt probe points, fixed pause macro, adjusted PA for 0.6 nozzle

--- a/klipper_config/printer_macros.cfg
+++ b/klipper_config/printer_macros.cfg
@@ -5,6 +5,7 @@ gcode:
     {% set X = params.X|default(50)|float %}
     {% set Y = params.Y|default(0)|float %}
     {% set Z = params.Z|default(10)|float %}
+    {% set E = params.E|default(1)|float %}
     SAVE_GCODE_STATE NAME=PAUSE_state
     BASE_PAUSE
     G91
@@ -149,9 +150,9 @@ gcode:
     # Set to absolute positioning
     G90
     # Home the printer if required
-    {% if "x" not in printer.toolhead.homed_axes or "y" not in printer.toolhead.homed_axes %}
+    #{% if "x" not in printer.toolhead.homed_axes or "y" not in printer.toolhead.homed_axes %}
     G28 X Y
-    {% endif %}
+    #{% endif %}
     # Wait for bed to reach temperature
     M190 S{BED_TEMP}
     
@@ -159,15 +160,14 @@ gcode:
     M104 S{EXTRUDER_TEMP}
 
     # Home Z and Level gantry if required
-    {% if "z" not in printer.toolhead.homed_axes %}
+    #{% if "z" not in printer.toolhead.homed_axes %}
     G28 Z
     Z_TILT_ADJUST
-    {% endif %}
-    # Set to absolute positioning again after homing
-    G90
+    #{% endif %}
+
     # Move to start position
-    G1 X0 Y0 F300.0;
-    G1 Z0 F300.0;
+    G1 X0 Y0 F3000.0;
+    G1 Z5 F3000.0;
 
     # Wait for Extruder temperature
     M109 S{EXTRUDER_TEMP}
@@ -180,6 +180,7 @@ gcode:
     G1 Y90 E15.0  F1000.0 ; start slow
     G1 Y180 E30.0  F2000.0 ; speed up to pull any stray strands
     G1 Y200 E30.0  F2000.0 ; end with a coast
+    G92 E0
 
 
 [gcode_macro END_PRINT]
@@ -191,9 +192,15 @@ gcode:
     # Move nozzle away from print while retracting
     G91 ; relative mode
     G1 X-2 Y-2 E-3 F300
+
     # Raise nozzle by 10mm
     G1 Z10 F3000
     G90 ; absolute mode
+
+    # Move X full left
+    G1 X0 F2000
+    G1 Y{printer.toolhead.axis_maximum.y} F2000
+
     # Disable steppers
     M84
 
