--- a/klipper_config/printer_stepper.cfg
+++ b/klipper_config/printer_stepper.cfg
@@ -64,7 +64,7 @@ z_positions:
     2, 112
     247, 112
 points:
-    42, 112
+    47, 112
     234, 112
 speed: 120
 horizontal_move_z: 8
@@ -90,7 +90,13 @@ sensor_pin: PA2
 #pid_Kd: 108.982
 min_temp: 0
 max_temp: 300
-pressure_advance: 0.105
+
+#PA for 0.4 nozzle
+#pressure_advance: 0.105
+
+#PA for 0.6 nozzle
+pressure_advance: 0.05
+
 max_extrude_only_distance:150
 
 
