fixed pause and resume

--- a/klipper_config/printer_macros.cfg
+++ b/klipper_config/printer_macros.cfg
@@ -17,6 +17,7 @@ gcode:
 [gcode_macro RESUME]
 rename_existing: BASE_RESUME
 gcode:
+    {% set E = params.E|default(1)|float %}
     G91
     G1 E{E} F2100
     G90
