Updated moonraker server config and thermistor type per deprecated features

--- a/klipper_config/moonraker.conf
+++ b/klipper_config/moonraker.conf
@@ -2,6 +2,8 @@
 host: 0.0.0.0
 port: 7125
 enable_debug_logging: True
+
+[file_manager]
 config_path: ~/klipper_config
 
 [octoprint_compat]
@@ -9,16 +11,16 @@ config_path: ~/klipper_config
 [update_manager]
 enable_auto_refresh: True
 
-[update_manager client moonraker-telegram]
-type: git_repo
-path: /home/pi/moonraker-telegram
-origin: https://github.com/Raabi91/moonraker-telegram.git
-env: /home/pi/.moonraker-telegram-env/bin/python
-requirements: scripts/moonraker-telegram-requirements.txt
-install_script: scripts/install.sh
+#[update_manager client moonraker-telegram]
+#type: git_repo
+#path: /home/pi/moonraker-telegram
+#origin: https://github.com/Raabi91/moonraker-telegram.git
+#env: /home/pi/.moonraker-telegram-env/bin/python
+#requirements: scripts/moonraker-telegram-requirements.txt
+#install_script: scripts/install.sh
 
 [authorization]
-enabled: True
+#enabled: True
 cors_domains:
   http://*.local
   https://*.local
