--- a/klipper_config/printer_stepper.cfg
+++ b/klipper_config/printer_stepper.cfg
@@ -82,7 +82,8 @@ rotation_distance: 7.728
 nozzle_diameter: 0.600
 filament_diameter: 1.750
 heater_pin: PB3
-sensor_type: NTC 100K beta 3950
+#sensor_type: NTC 100K beta 3950
+sensor_type: Generic 3950
 sensor_pin: PA2
 #control: pid
 #pid_Kp: 21.527
