Compat changes for moonraker updates and hosts for vpn

--- a/klipper_config/moonraker.conf
+++ b/klipper_config/moonraker.conf
@@ -1,10 +1,10 @@
 [server]
 host: 0.0.0.0
 port: 7125
-enable_debug_logging: True
+#enable_debug_logging: True
 
 [file_manager]
-config_path: ~/klipper_config
+#config_path: ~/klipper_config
 
 [octoprint_compat]
 
@@ -42,6 +42,7 @@ trusted_clients:
  100.120.253.111
  100.75.196.36
  100.122.3.17
+ 100.81.204.53
  FE80::/10
  ::1/128
 
