--- a/klipper_config/printer_macros.cfg
+++ b/klipper_config/printer_macros.cfg
@@ -134,6 +134,46 @@ gcode:
     M190 S70
     COMMIT_BED_MESH
 
+[gcode_macro START_PRINT_RECOVER]
+gcode:
+    {% set BED_TEMP = params.BED_TEMP|default(50)|float %}
+    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(180)|float %}
+    
+    # Start bed heating
+    M140 S{BED_TEMP}
+    # Set extruder temperature to below melting point
+    M104 S150
+    # Load mesh profile
+    BED_MESH_PROFILE LOAD=ender3
+    # Reset the G-Code Z offset (adjust Z offset if needed)
+    #SET_GCODE_OFFSET Z=0.0
+    # Set to absolute positioning
+    G90
+    # Home the printer if required
+    #{% if "x" not in printer.toolhead.homed_axes or "y" not in printer.toolhead.homed_axes %}
+    G28 X Y
+    #{% endif %}
+    # Wait for bed to reach temperature
+    M190 S{BED_TEMP}
+    
+    # Set extruder temperature
+    M104 S{EXTRUDER_TEMP}
+
+    # Home Z and Level gantry if required
+    #{% if "z" not in printer.toolhead.homed_axes %}
+    G28 Z
+    #{% endif %}
+
+    # Move to start position
+    G1 X0 Y0 F3000.0;
+    G1 Z5 F3000.0;
+
+    # Wait for Extruder temperature
+    M109 S{EXTRUDER_TEMP}
+    #Reset Extruder
+    G92 E0
+
+
 
 [gcode_macro START_PRINT]
 gcode:
@@ -205,6 +245,7 @@ gcode:
     # Disable steppers
     M84
 
+[exclude_object]
 
 #[gcode_macro POWER_OFF_PRINTER]
 #gcode:
