--- a/klipper_config/printer_stepper.cfg
+++ b/klipper_config/printer_stepper.cfg
@@ -96,7 +96,10 @@ max_temp: 300
 #pressure_advance: 0.105
 
 #PA for 0.6 nozzle
-pressure_advance: 0.05
+#pressure_advance: 0.05 #causes some wall gaps in z seam 
+pressure_advance: 0.03 
+
+
 
 max_extrude_only_distance:150
 
